deploy/technitium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium-dns-ingress
  namespace: external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dns.192.168.49.2.nip.io
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dns.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: technitium-dns
            port:
              number: 5380
